# OS-Zero

./: .gitignore  ARCHITECTURE  CHANGELOG  LICENSE  PLAN  README  ROADMAP  STATUS  TODO  Tuprules.tup  clean.sh  dirtags.sh  edirtags.sh  mkctags.sh  mketags.sh
.tup/: db
doc/: SIGNAL.txt  kern.txt
doc/style/: abbrev.txt  style.c  style.h  style.txt
foreign/: build_openlibm.sh
foreign/bsdgames/: LINUX.txt  README  bsdgames.diff  build.sh  clone.sh
foreign/hack-1.0.3/: Makefile  README  alloc.c  config.h  def.objects.h  hack.c  (+56 more)
ideas/: apps.txt  asmbook.txt  dev.txt  games.txt  inet.txt  ipc.txt  kern.txt  libs.txt  sync.txt  zed.txt  zerobook.txt
kern/: BUGS  IDEAS  IDEAS.txt  README  ROADMAP.txt  STATUS  TASK.txt  THANKS  TODO  VFS  acl.h  asm.h  bitmap.c  buf.c  buf.h  conf.h  cpio.h  cpu.c  cpu.h  cred.h  data.c  debug.c  debug.h  dev.h  ev.c  ev.h  ev.txt  grp.h  init.c  io.h  lfb.h  list.h  logo.c  macros.h  malloc.c  malloc.h  mem.h  mem.txt  mem32.c  new  1.txt  (+32 more)
notes/: CDL.txt  ZDE.h  audio.txt  booklist.txt  c.txt  calc.txt  calls.txt  deck.txt  fs.txt  i387.txt  icons.txt  kernel.txt  kidprog.txt  libs.txt  libzero.txt  mem.txt  posix.txt  roadmap.txt  sched.c  sched.txt  shm.h  softarch.txt  storage.txt  style.txt  syscall.h  syscallnum.h  unix.txt  zero.txt  zml.txt
test/: afs.h  aud.h  bitmap.c  btest.sh  buf.c  buf.sh  buftest.c  clean.sh  deck.h  iso9660.h  libc.h  vid.h
usr/: TODO  TODO.txt
usr/tools/Earthquake/: IDEAS  Makefile.am  Makefile.in  README  TODO  TRIGRAPHS  aclocal.m4  asm.c  autoconf.h.in  cc.c  compile.h  configure  configure.ac  constants.h  cpp.c  debug.h  istring.loT  macros.h  main.h  protos.h  util.c  util.h
usr/tools/Earthquake/Ecc/: IDEAS  Makefile.am  Makefile.in  README  cc.h  itos.c  main.c  main.h  protos.h  version.h
usr/tools/Earthquake/doc/: EXTENSIONS  IMPLEMENTATION
usr/tools/Earthquake/internal/: align.h  cc.h  cpp.h  error.h  file.h  hash.h  icc.c  icpp.c  ierror.c  ifile.c  ihash.c  imacro.c  imath.c  iopt.c  istring.c  itype.c  iutil.c  macro.h  main.h  math.h  opt.h  parse.h  section.h  size.h  string.h  token.h  type.h  util.h
usr/tools/Earthquake/libasm/: main.h  protos.h
usr/tools/Earthquake/m4/: arch.m4  compiler.m4  defaults.m4  defines.m4  gcc.m4  host.m4  init.m4  kernel.m4  opts.m4  posix.m4  progs.m4  replace.m4  templates.m4  types.m4  util.m4  vars.m4  x86.m4  xopen.m4
usr/tools/Earthquake/mach/x86/: cpu.h  main.h  register.h
(+1511 files in other folders)
